traversal.snake.Snake.scala.error
Compilation error:
Snake:27: error: ';' expected but ',' found.
    gauche() , avance() ; gauche()
             ^